--- a/src/view/Components/Reminder/ReminderFilters/ReminderFilters.scss
+++ b/src/view/Components/Reminder/ReminderFilters/ReminderFilters.scss
@@ -15,7 +15,26 @@
 
 /* Date range filter */
 .date-range-filter {
+  min-width: 250px;
   max-width: 400px;
+  overflow: hidden;
+
+  .filter-item__title {
+    display: flex;
+    flex-flow: row nowrap;
+    column-gap: 1rem;
+    overflow-x: auto;
+
+    .field-header-btn {
+      flex: 0 0 auto;
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .date-range-filter .filter-item__title {
+    column-gap: 1.5rem;
+  }
 }
 
 /* Filters inside Collapsible container */
