--- a/src/view/Views/Statistics/components/Filters/StatisticsFilters.scss
+++ b/src/view/Views/Statistics/components/Filters/StatisticsFilters.scss
@@ -21,11 +21,24 @@
 }
 
 .date-range-filter {
+  min-width: 250px;
   max-width: 400px;
+  overflow: hidden;
 
   .filter-item__title {
     display: flex;
     flex-flow: row nowrap;
+    column-gap: 1rem;
+    overflow-x: auto;
+
+    .field-header-btn {
+      flex: 0 0 auto;
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .date-range-filter .filter-item__title {
     column-gap: 1.5rem;
   }
 }
